# telegram_mini_chatbot

./: Cargo.toml  README.md
.sqlx/: query-1b0bf9489512c5a53934ec322528317adbc405ce2262c323e8f3abdd536a8ff3.json  query-4b40aa6394f0332d18bd9efca037de099f9638deda4ef3de0733255b07867210.json  query-6f483f10cd8cf56390933d664e9f7e10adfaaeb938f783f9b2ab2f85c3f6f2cf.json  query-7f5894eb1a551a9964a2fe3fac5d21d351f22d1e4fe1445ca0a5b35e569429cd.json  query-a7dc9530bacfa1d53cb6eaa5c34dda44ac1e751b4c960b2aed12746f0ce34eb2.json
migrations/: 20250219115129_create_users_table.sql
src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs  services.rs
