[package]
name = "telegram_chatbot_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
reqwest = "0.12.12"
dotenv = "0.15"
tonic = "0.12.3" # For TON integration
sha2 = "0.10" # For hashing
hex = "0.4"   # For hexadecimal encoding
lazy_static = "1.4" # For global static variables
url = "2.4"   # For parsing URLs
serde_json = "1.0" # For JSON serialization/deserialization
log = "0.4"
env_logger = "0.11.6"
tower-http = "0.6.2"